# Insurance_hackathon

./: .gitignore  README.md  app.py  links.md  plan.md  requirements.txt
backend/: .env.example  clip_car_verification_service.py  clip_service_mock.py  insurance_claims.db  main_api.py  pyproject.toml  requirements.txt  requirements_clip.txt  requirements_core.txt  requirements_minimal.txt  start_clip_service.py  test_claim_scoring.py  test_delete_claim.py  test_upload.py  test_verification_flow.py
backend/app/: auth.py  database.py  main.py  models.py  schemas.py
backend/app/routers/: admin.py  auth.py  car_verification.py  claims.py  contact.py
backend/app/utils/: car_verification.py
backend/utils/: report_generator.py
frontend/: .env.example  package-lock.json  package.json
frontend/public/: index.html
frontend/src/: App.css  App.js  index.css
frontend/src/components/: CarVerification.js  ImageUpload.js  Navbar.js  ProtectedRoute.js  ReportGenerator.js
frontend/src/context/: AuthContext.js
frontend/src/pages/: About.js  AdminDashboard.js  AdminImages.js  Contact.js  Dashboard.js  Features.js  Home.js  Login.js  NewClaim.js  Register.js  ViewClaim.js
models/: damage_assessor.py  fraud_detector.py
templates/: about.html  base.html  contact.html  features.html  index.html
templates/auth/: login.html  register.html
templates/claim/: new_claim.html  view_claim.html
templates/dashboard/: admin_dashboard.html  user_dashboard.html
utils/: report_generator.py
